fix: Text on images are more readable

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ ul {
     grid-template-columns: 1fr;
     grid-template-rows: 200px repeat(3, 100px) 200px;
     justify-content: center;
+    grid-gap: 10px;
     margin-top: 20px;
 }
 
@@ -58,11 +59,55 @@ ul {
     width: 80%;
     height: 100%;
     margin: auto;
-    border-radius: 10%;
+    border-radius: 5%;
 }
 
-.article-info {
+.feature-article-2 {
+    background-image: url(../images/cheese.jpg);
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    border-radius: 5%;
+}
+
+.feature-article-3 {
+    background-image: url(../images/breakfast.jpg);
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    border-radius: 5%;
+}
+
+.feature-article-4 {
+    background-image: url(../images/beach.jpg);
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    border-radius: 5%;
+}
+
+.feature-article-5 {
+    background-image: url(../images/bacon.jpg);
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    border-radius: 5%;
+}
+
+.article-info-large {
     position: relative;
     top: 100px;
     left: 20px;
+    color: var(--links);
+}
+
+.article-info-small {
+    position: relative;
+    top: 20px;
+    left: 20px;
+    color: var(--links);
 }
